feat: GetUserByCpf route and improve documentation
