# routes/api.php
@@ -1,6 +1,5 @@
 <?php
 
-use App\Enums\HTTPStatusCodeEnum;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\LDAPController;
@@ -15,7 +14,7 @@ use App\Http\Controllers\Auth\AuthController;
 Route::prefix('v1')->group(function () {
     // Catch all undefined routes and return 404 error message in JSON format.
     Route::fallback(function () {
-        abort(HTTPStatusCodeEnum::NOT_FOUND, 'API resource not found.');
+        abort(404, 'API resource not found.');
     });
 
     // Public routes (no authentication required)
@@ -24,8 +23,11 @@ Route::prefix('v1')->group(function () {
     });
 
     Route::post('/login', [AuthController::class, 'login']);
-    Route::get('/ldap', [LDAPController::class, 'index']);
 
+    Route::prefix('ldap')->group(function () {
+        Route::get('/', [LDAPController::class, 'index']);
+        Route::get('/getByCPF', [LDAPController::class, 'getByCPF']);
+    });
 
 
     // Routes protected by Sanctum middleware (auth:sanctum)
